--- a/pageWebSite/style.css
+++ b/pageWebSite/style.css
@@ -25,7 +25,13 @@ body {
 
 .topmenu:hover {
     color: white;
-    /* Add the styles here */
+    font-weight: bolder;
+    text-decoration: underline;
+    background-color: #5a00a0;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease-in-out;
 }
 
 .topdiv {
